--- a/projects/baby-corp/assets/css/style.css
+++ b/projects/baby-corp/assets/css/style.css
@@ -34,6 +34,7 @@ a {
 .header-1{
 	display: flex;
 	align-items: center;
+    gap: 10px;
 	justify-content: space-between;
 	width: 100%;
      padding: 2rem 0;
@@ -70,7 +71,8 @@ header form label{
 }
 
 .input-group {
-    width: 20rem;
+    width: 100%;
+    max-width: 200px;
 }	
 header-1 i.fas.fa-shopping-cart {
     margin: 0.5rem;
@@ -95,11 +97,7 @@ a.cart:hover{
 
 }
 
-.hero-banner .content .btn-primary:hover{
-    color: #fff;
-    background-color: #ad6b07;
-    border-color: #ad6b07;
-}
+
 
 
 
@@ -184,11 +182,16 @@ nav.navbar.navbar-expand-lg.navbar-light {
 
 }
 
-.hero-banner .content .btn-primary {
+.btn-primary {
     color: #fff;
     background-color: #d37f00;
     border-color: #d37f00;
 	
+}
+.btn-primary:hover{
+    color: #fff;
+    background-color: #ad6b07;
+    border-color: #ad6b07;
 }
 
 .h1, h1 {
@@ -212,7 +215,7 @@ section#category {
 
 section#category .card-img-overlay {
     position: absolute;
-    top: 93px;
+    top: unset !important;
     right: 0;
     bottom: 0;
     left: 15px;
@@ -234,6 +237,11 @@ section#category .card-img-overlay {
 
 .inquire{
     position: relative;
+    background: linear-gradient(90deg,rgb(255 255 255 / 47%),rgb(255 255 255 / 25%)), url(../img/inquire-3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 60px 40px;
 }
 
 .image-container{
@@ -255,14 +263,14 @@ section#category .card-img-overlay {
     line-height: 2rem;
 }
 
-.inquire .image-container .box .content a.btn.btn-primary {
+/*.inquire .image-container .box .content a.btn.btn-primary {
     background: #e11880;
     border: none;
 }
 
 .inquire .image-container .box .content a.btn.btn-primary:hover {
     background: #e11880c5;
-}
+}*/
 
 
 /* products */
@@ -341,7 +349,7 @@ section.feature.mb-5  div.carousel-caption h3{
 /* footer  */
 
 .footer{
-    padding: 0 15%;
+/*    padding: 0 15%;*/
 }
 
 section.footer div div.col-md-6 span a {
@@ -401,21 +409,30 @@ section.feature.mb-5 div.row.mb-5 div.col-md-6{
 }
 
 
-    @media (max-width: 575px){
-        .inquire .image-container .box .content {
+@media (max-width: 575px){
+    section.products.container.mb-3 h2 {
+        font-size: 1.8rem;
+    }
+    .hero-banner .content h1 {
+        font-size: 2rem;
+    }
+    #category .card-title {
+        font-size: 20px;
+    }
+    .inquire .image-container .box .content {
         line-height: 2rem;
     }
 
-        .input-group {
+    .input-group {
         width: 10rem;
     }
-        section#category h5.card-title{
-        font-size: 4rem;
-        padding-top: 8rem;
+    section#category h5.card-title{
+        font-size: 2rem;
+        
     }
 
-        section#category p.card-text{
-        font-size: 2.1rem;
+    section#category p.card-text{
+        font-size: 1.5rem;
     }
 
 }
