--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,7 @@ header.navbar-bg-color {
 
 
 .home .content .btn-outline-primary {
+    background-color: var(--primary);;
     border-color: var(--primary);
     color: #000;
     
