adding the class of contact

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ html, body{
     scroll-behavior: smooth;
 }
 
-section#about, section.project, section.resources {
+section#about, section.project, section.resources, section.contact {
     padding: 4rem 0;
 }
 
